DDF-6111 Changes the CSRF filter from being a servlet filter to a security filter to prevent future race condition

--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -211,6 +211,11 @@
         </dependency>
         <dependency>
             <groupId>ddf.security.filter</groupId>
+            <artifactId>security-filter-csrf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.security.filter</groupId>
             <artifactId>security-filter-authorization</artifactId>
             <version>${project.version}</version>
         </dependency>
