--- a/platform/security/filter/pom.xml
+++ b/platform/security/filter/pom.xml
@@ -36,6 +36,7 @@
     <modules>
         <module>security-filter-web-sso</module>
         <module>security-filter-login</module>
+        <module>security-filter-csrf</module>
         <module>security-filter-authorization</module>
     </modules>
 </project>
