DDF-6256 Exclude htrace-core4 from Solr dependencies
It's been retired since 2018 and pulls in an old version
of Jackson with a bunch of known vulnerabilities.

--- a/platform/solr/solr-dependencies/pom.xml
+++ b/platform/solr/solr-dependencies/pom.xml
@@ -33,6 +33,15 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
                 </exclusion>
+                <!--
+                    HTrace is a retired project. It shades com.fasterxml.jackson.core:jackson-databind:2.4.0,
+                    which pulls in a bunch of CVEs. See
+                    https://ossindex.sonatype.org/component/pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.4.0
+                  -->
+                <exclusion>
+                    <groupId>org.apache.htrace</groupId>
+                    <artifactId>htrace-core4</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
