--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
         <pax.logging.version>1.11.6</pax.logging.version>
         <pax.url.version>2.6.2</pax.url.version>
         <pax.web.version>7.2.16</pax.web.version>
+        <pax.web.jsp.version>7.2.18</pax.web.jsp.version>
         <restito.version>0.8.2</restito.version>
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.5.1</xmlunit-matchers.version>
@@ -153,6 +154,7 @@
         <awaitility.version>3.1.5</awaitility.version>
         <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
         <bouncy.version>1.61</bouncy.version>
+        <c3p0.version>0.9.5.4</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
         <camel.version>2.24.2</camel.version>
@@ -202,10 +204,10 @@
         <guava.platform>jre</guava.platform>
         <guava.version>${guava.version-number}-${guava.platform}</guava.version>
         <hawtbuff.version>1.11</hawtbuff.version>
-        <httpclient.version>4.5.6</httpclient.version>
+        <httpclient.version>4.5.12</httpclient.version>
         <httpcore.version>4.4.10</httpcore.version>
         <httpmime.version>${httpclient.version}</httpmime.version>
-        <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
+        <jai-imageio-core.version>1.4.0</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
         <jackson.version>2.11.0</jackson.version>
         <jasypt.version>1.9.3</jasypt.version>
@@ -282,6 +284,7 @@
         <protobuf.version>3.6.1</protobuf.version>
         <proton.version>0.31.0</proton.version>
         <qpid-jms.version>0.39.0</qpid-jms.version>
+        <quartz.version>2.3.2</quartz.version>
         <require-css.version>0.1.10</require-css.version>
         <sardine.version>5.7</sardine.version>
         <hazelcast.version>3.12.3</hazelcast.version>
@@ -293,11 +296,11 @@
         <smtp.client.version>1.7.1</smtp.client.version>
         <solr.version>8.5.0</solr.version>
         <solr.docs.version>8_5</solr.docs.version>
-        <solr.httpclient.version>4.5.6</solr.httpclient.version>
+        <solr.httpclient.version>4.5.12</solr.httpclient.version>
         <solr.httpcore.version>4.4.10</solr.httpcore.version>
         <solr.zookeeper.version>3.5.5</solr.zookeeper.version>
         <solr.spatial4j.version>0.7</solr.spatial4j.version>
-        <spark.version>2.5.5</spark.version>
+        <spark.version>2.9.2</spark.version>
         <spatial4j.version>0.7</spatial4j.version>
         <spring.version>5.2.5.RELEASE</spring.version>
         <spring-osgi.version>1.2.1</spring-osgi.version>
@@ -330,7 +333,7 @@
         <failsafe.argline>${jacoco.argline}</failsafe.argline>
 
         <fabric8.docker.plugin.version>0.27.1</fabric8.docker.plugin.version>
-        <tink.version>1.2.2</tink.version>
+        <tink.version>1.4.0</tink.version>
         <org.json.version>20170516</org.json.version>
         <ehcache.version>2.10.6</ehcache.version>
 
