--- a/distribution/ddf/pom.xml
+++ b/distribution/ddf/pom.xml
@@ -54,21 +54,63 @@
                 <artifactId>karaf-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>features-add-to-repository</id>
+                        <id>add-ddf-features</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>features-add-to-repository</goal>
                         </goals>
                         <configuration>
+                            <!-- Add only the top-level features defined in DDF's feature
+                                 descriptors (skipping transitive features). This ensures we can
+                                 install all the features we need without blindly pulling in
+                                 features from third party feature descriptors.
+
+                                 NOTE: Camel and CXF are included here since I'm not sure which
+                                 features are used and which features are not downstream. We could
+                                 shrink the distribution further by adding only the features we
+                                 expect to use. -->
                             <addTransitiveFeatures>false</addTransitiveFeatures>
+                            <resolveDefinedRepositoriesRecursively>false</resolveDefinedRepositoriesRecursively>
                             <descriptors>
-                                <descriptor>
-                                    mvn:ddf.features/install-profiles/${project.version}/xml/features
-                                </descriptor>
-                                <descriptor>
-                                    mvn:org.codice.ddf/ui/${ddf-admin-ui.version}/xml/features
-                                </descriptor>
+                                <descriptor>mvn:ddf.catalog/catalog-app/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/admin/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/apps/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/branding/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/camel/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/cxf/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/install-profiles/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/kernel/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/security/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/solr/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.features/utilities/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.codice.ddf/ui/${ddf-admin-ui.version}/xml/features</descriptor>
                             </descriptors>
+                            <repository>${setup.folder}/${karaf.folder}/system</repository>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-thirdparty-features</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>features-add-to-repository</goal>
+                        </goals>
+                        <configuration>
+                            <!-- There are third party repos from which we only use a few features.
+                                 To avoid pulling in more than we need, specify each individual
+                                 feature here -->
+                            <addTransitiveFeatures>true</addTransitiveFeatures>
+                            <descriptors>
+                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/enterprise/${karaf.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features</descriptor>
+                            </descriptors>
+                            <features>
+                                <feature>decanter-sla</feature>
+                                <feature>decanter-simple-scheduler</feature>
+                                <feature>transaction</feature>
+                                <feature>spring</feature>
+                                <feature>spring-tx</feature>
+                            </features>
                             <repository>${setup.folder}/${karaf.folder}/system</repository>
                         </configuration>
                     </execution>
@@ -275,8 +317,78 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ddf.catalog</groupId>
+            <artifactId>catalog-app</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>admin</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>apps</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>branding</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>camel</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>cxf</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
             <groupId>ddf.features</groupId>
             <artifactId>install-profiles</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>kernel</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>security</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>solr</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>ddf.features</groupId>
+            <artifactId>utilities</artifactId>
             <version>${project.version}</version>
             <classifier>features</classifier>
             <type>xml</type>
